plugins {
    id "maven-publish"
    id 'java'
}

group 'co.nvqa'
version '1.3.21-RC6'


sourceCompatibility = JavaVersion.VERSION_11
String qaRepoUsername = System.getenv("nvqaRepositoryUsername") ?
        System.getenv("nvqaRepositoryUsername") :
        "${defaultNvqaRepositoryUsername}"
String qaRepoPassword = System.getenv("nvqaRepositoryPassword") ?
        System.getenv("nvqaRepositoryPassword") :
        "${defaultNvqaRepositoryPassword}"

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        allowInsecureProtocol = true
        url = "http://nexus3.qa.tech.nv/repository/nvqa-release/"
    }
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allJava
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = "co.nvqa"
            artifactId = "common-core"
            version = version

            from components.java
            artifact sourcesJar
            pom {
                name = "NVQA Common Core Library"
                description = "Core API and DB client library"
                url = "https://bitbucket.ninjavan.co/projects/QA/repos/common-core/browse"
            }
        }
    }
    repositories {
        maven {
            name = "nvqaRepository"
            credentials {
                username = qaRepoUsername
                password = qaRepoPassword
            }
            allowInsecureProtocol = true
            url = "http://nexus3.qa.tech.nv/repository/nvqa-release/"
        }
    }
}

dependencies {
    compileOnly "org.projectlombok:lombok:1.18.24"
    annotationProcessor "org.projectlombok:lombok:1.18.22"
    implementation "co.nvqa:common-base:1.3.8"
    implementation "co.nvqa:common-auth:1.3.1"
    implementation "org.assertj:assertj-core:3.22.0"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    //    tests lib
    testImplementation "org.mockito:mockito-inline:3.12.4"
    testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
    testImplementation "uk.org.webcompere:system-stubs-core:2.0.2"
    testImplementation "uk.org.webcompere:system-stubs-jupiter:2.0.2"
}

test {
    useJUnitPlatform()
}

task generateJavadoc(type: Javadoc) {
    source = sourceSets.main.allJava
}
